--- a/src/multiselect/styles.css
+++ b/src/multiselect/styles.css
@@ -119,11 +119,8 @@ li.groupChildEle {
   padding-left: 30px;
 }
 .icon_down_dir {
-  position: absolute;
-  right: 10px;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 .icon_down_dir:before { 
   content: '\e803'; 
